# FilumAssm

./: .env.example  .gitignore  README.md  docker-compose.yaml  embedding.py  main.py  milvus.yaml  milvus_connector.py  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci.yaml
agent/: agent.py  llm.py  state.py  tools.py
data/ai_automation/: automation.md
data/customer_360/: customers.md  engagement.md
data/customer_service/: inbox.md  tickets.md
data/insights/: experience.md  operations.md
data/voice_of_customer/: conversations.md  journeys.md  reviews.md  surveys.md
